6.3.2
[fix] some videos not playing when logged in
[fix] reset function cache at restart/update to resolve issues persisting due to cached results
[fix] service potentially not shutting down http server
[upd] player javascript retrieval

6.3.1
[fix] ensure playback monitoring is monitoring the correct item
[fix] check for abortRequested while processing purchased collections
[upd] Use setArt instead of iconImage, thumbnailImage and setProperty('fanart_image')

6.3.0
[add] support for keymapping of some endpoints, wiki: https://kodi.wiki/view/Add-on:YouTube#Keymaps
[add] 'Rate videos in playlists' setting to 'Settings - General - Rate after watching'
[add] Support for purchased collections |contrib: MisterD81|
[fix] Playback of some videos (e.g. music videos)
[fix] Live stream playback
[fix] post play add to watch history
[fix] fix add-ons playback history not saving
[fix] playback monitoring/post play events triggering for the wrong videos in some cases
[fix] call setResolvedUrl(False) if get_video_streams fails
[upd] code cosmetics and resolve inspections
[upd] improve watch history tracking, actively report watch times and state during playback
[upd] sign in/out, switch user, and settings ListItems to isFolder=False and isPlayable=False
[upd] improve watch later playlist id retrieval and feedback
[upd] Use SPDX license identifier
[lang] de_de strings |contrib: tobhor|
[lang] el_gr strings |contrib: twilight0|
[lang] es_es strings |contrib: roliverosc|
[lang] ko_kr strings |contrib: parkmino|
[lang] nl_nl strings |contrib: Markman-B|

6.2.3
[add] Next Page to 'More...' -> 'Add to...' context menu
[add] icon and description to playlists in 'More...' -> 'Add to...' context menu on Kodi 17+
[add] 'Play audio only' context menu item
[fix] generated dash with no supported video streams(audio only) being played when Audio only not enabled
[fix] potential RuntimeError when retrieving total time of playing content if player is stopped immediately